--- a/p4.ipynb
+++ b/p4.ipynb
@@ -83,6 +83,89 @@
     " else:\n",
     "    print(f\"Wrong: Predicted = {predicted}, Actual = {actual}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "59336d0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction Results:\n",
+      "\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = virginica, Actual = virginica\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = versicolor, Actual = versicolor\n",
+      "Correct: Predicted = setosa, Actual = setosa\n",
+      "Correct: Predicted = setosa, Actual = setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "iris = load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "target_names = iris.target_names\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "k = 5\n",
+    "knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "knn.fit(X_train, y_train)\n",
+    "y_pred = knn.predict(X_test)\n",
+    "print(\"Prediction Results:\\n\")\n",
+    "for i in range(len(y_test)):\n",
+    " actual = target_names[y_test[i]]\n",
+    " predicted = target_names[y_pred[i]]\n",
+    " if y_test[i] == y_pred[i]:\n",
+    "    print(f\"Correct: Predicted = {predicted}, Actual = {actual}\")\n",
+    " else:\n",
+    "    print(f\"Wrong: Predicted = {predicted}, Actual = {actual}\")"
+   ]
   }
  ],
  "metadata": {
